vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__object_declaration-8.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration, \"a, b, c : in std_logic\")"
---
InterfaceObjectDeclaration
  IdentifierList
    Identifier 'a'
    Comma
    Identifier 'b'
    Comma
    Identifier 'c'
  Colon
  Keyword(In)
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'std_logic'
