vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__parses_interface_file_declaration.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration, \"file foo : text open read_mode\",)"
---
InterfaceFileDeclaration
  Keyword(File)
  IdentifierList
    Identifier 'foo'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'text'
