vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__parses_interface_file_declaration_no_file_name.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration,\n\"file foo : text is \\\"file_name\\\"\",)"
---
InterfaceFileDeclaration
  Keyword(File)
  IdentifierList
    Identifier 'foo'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'text'
