vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__parses_interface_identifier_list.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration, \"constant foo, bar : natural\",)"
---
InterfaceObjectDeclaration
  Keyword(Constant)
  IdentifierList
    Identifier 'foo'
    Comma
    Identifier 'bar'
  Colon
  SubtypeIndication
    Name
      NameDesignatorPrefix
        Identifier 'natural'
