vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__parses_interface_subprogram.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration, \"function foo return bar\")"
---
InterfaceSubprogramDeclaration
  InterfaceFunctionSpecification
    Keyword(Function)
    Identifier 'foo'
    Keyword(Return)
    Name
      NameDesignatorPrefix
        Identifier 'bar'
