vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__parses_interface_subprogram_default-2.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration, \"function foo return bar is <>\")"
---
InterfaceSubprogramDeclaration
  InterfaceFunctionSpecification
    Keyword(Function)
    Identifier 'foo'
    Keyword(Return)
    Name
      NameDesignatorPrefix
        Identifier 'bar'
  SubprogramDefault
    Keyword(Is)
    InterfaceSubprogramDefaultBox
      BOX
