vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__parses_interface_subprogram_default.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration,\n\"function foo return bar is lib.name\")"
---
InterfaceSubprogramDeclaration
  InterfaceFunctionSpecification
    Keyword(Function)
    Identifier 'foo'
    Keyword(Return)
    Name
      NameDesignatorPrefix
        Identifier 'bar'
  SubprogramDefault
    Keyword(Is)
    InterfaceSubprogramDefaultName
      Name
        NameDesignatorPrefix
          Identifier 'lib'
        SelectedName
          Dot
          Identifier 'name'
