vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__parses_interface_subprogram_with_parameters.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration,\n\"function Match(Actual : ActualType) return boolean\")"
---
InterfaceSubprogramDeclaration
  InterfaceFunctionSpecification
    Keyword(Function)
    Identifier 'Match'
    ParameterList
      ParenthesizedInterfaceList
        LeftPar
        InterfaceList
          InterfaceObjectDeclaration
            IdentifierList
              Identifier 'Actual'
            Colon
            SubtypeIndication
              Name
                NameDesignatorPrefix
                  Identifier 'ActualType'
        RightPar
    Keyword(Return)
    Name
      NameDesignatorPrefix
        Identifier 'boolean'
