vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__parses_interface_type.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::interface_declaration, \"type name\")"
---
InterfaceIncompleteTypeDeclaration
  Keyword(Type)
  Identifier 'name'
